syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.chepenkov.generated";
option java_outer_classname = "StorageProto";

package storage;

service StorageService {
  rpc UploadFile (stream FileChunk) returns (FileUploadResponse);
}

message FileChunk {
  string filename = 1;
  bytes chunkData = 2;
  int32 chunkIndex = 3;
  bool isLast = 4;
}

message FileUploadResponse {
  string fileUrl = 1;
  bool isSuccess = 2;
}
