package ru.chepenkov.storage.Service;

import io.grpc.stub.StreamObserver;
import ru.chepenkov.generated.FileChunk;
import ru.chepenkov.generated.FileUploadResponse;
import ru.chepenkov.generated.StorageServiceGrpc;

import java.io.ByteArrayOutputStream;
import java.io.IOException;

public class StorageService {

}